안녕하세요

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>하성민바보</title>
 </head>
 <body>
-   <h1> 현우야 안녕ㅎㅎ</h1>
-   <p style="color:red;">읽씹하지 마라</p>
-   <img src="https://png.pngtree.com/thumb_back/fh260/background/20230609/pngtree-three-puppies-with-their-mouths-open-are-posing-for-a-photo-image_2902292.jpg"   />
+   <h1> 책임감있는 하사 하성민 자기소개 페이지 입니다.</h1>
+    <img style = "width: 500px; border-radius: 50px;"src = "성민이 개인사진.jpeg"/>
 </body>
 </html>
